--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tip Calculator</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=attach_money" />    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=attach_money,star" />    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
@@ -14,37 +14,34 @@
 <body>
     <div id="container">
         <div id="innerContainer">
-            <h1>Just Another Tip Calculator</h1>
+            <h1 class="">Just Another Tip Calculator</h1>
             <div id="setTip">
-                <div id="setTipText">Rate Your Server</div>
-                <div id="setTipFunction"></div>
+                <div id="setTipText" class="manrope setTipUpper">Rate Your Server</div>
+                <div id="setTipFunction" class="setTipLower">
+                    <span class="material-symbols-outlined solid">star</span>
+                    <span class="material-symbols-outlined">star</span>
+                    <span class="material-symbols-outlined">star</span>
+                    <span class="material-symbols-outlined">star</span>
+                    <span class="material-symbols-outlined">star</span>
+                </div>
             </div>
             <div id="calculations">
-                <div id="subtotalContainer" class="calculationRow">
-                    <span class="material-symbols-outlined">attach_money</span>
-                    <input 
-                        type="number" 
-                        id="subtotal" 
-                        name="subtotal" 
-                        placeholder="0.00"
-                        step="0.10"
-                        min="0"
-                        inputmode="decimal"
-                        pattern="^\d*(\.\d{0,2})?$"
-                        class="sigmar-regular"
-                    />
-                    <label for="subtotal">Subtotal</label>
-                </div>
-                <div id="tipContainer"class="calculationRow">
-                <span class="material-symbols-outlined">attach_money</span>
-                    <span id="tipValue" class="sigmar-regular numbers">0</span>
-                    <span id="tipLabel" class="labels">Tip</span>
-                </div>
-                <div id="totalContainer" class="calculationRow">
-                    <span class="material-symbols-outlined">attach_money</span>
-                    <span id="totalValue" class="sigmar-regular numbers">0</span>
-                    <label for="total">Total</label>
-                </div>
+                <input 
+                    type="number" 
+                    id="subtotal" 
+                    name="subtotal" 
+                    placeholder="0.00"
+                    step="0.10"
+                    min="0"
+                    inputmode="decimal"
+                    pattern="^\d*(\.\d{0,2})?$"
+                    class="manrope numbers"
+                />
+                <span id="subtotalLabel" class="manrope labels">Subtotal</span>
+                <span id="tipValue" class="manrope numbers">0</span>
+                <span id="tipLabel" class="manrope labels">Tip</span>
+                <span id="totalValue" class="manrope numbers">0</span>
+                <span id="totalLabel" class="manrope labels">Total</span>
                 <div id="toggles"></div>
             </div>
         </div>    
