Add functionality to change star class on hover and click

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <div id="setTip">
                 <div id="setTipText" class="manrope setTipUpper">Rate Your Server</div>
                 <div id="setTipFunction" class="setTipLower">
-                    <span class="material-symbols-outlined solid">star</span>
-                    <span class="material-symbols-outlined">star</span>
-                    <span class="material-symbols-outlined">star</span>
-                    <span class="material-symbols-outlined">star</span>
-                    <span class="material-symbols-outlined">star</span>
+                    <span id="star1" class="star material-symbols-outlined solid">star</span>
+                    <span id="star2" class="star material-symbols-outlined">star</span>
+                    <span id="star3" class="star material-symbols-outlined">star</span>
+                    <span id="star4" class="star material-symbols-outlined">star</span>
+                    <span id="star5" class="star material-symbols-outlined">star</span>
                 </div>
             </div>
             <div id="calculations">
