Add rounding functionality to the calculator Finish all of basic calculator operations

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                 <span id="tipLabel" class="manrope labels">Tip</span>
                 <span id="totalValue" class="manrope numbers">0</span>
                 <span id="totalLabel" class="manrope labels">Total</span>
-                <div id="toggles">
-                    <span class="toggle material-symbols-outlined"
-                    title="Round to the nearest $1">toggle_off</span>
-                    <span class="manrope labels">$1</span>
-                    <span class="toggle material-symbols-outlined"
-                    title="round to the nearest $.50">toggle_off</span>
-                    <span class="manrope labels">$.50</span>
-                </div>
+            </div>
+            <div id="toggles">
+                <span id="wholeToggle" class="toggle material-symbols-outlined"
+                title="Round to the nearest $1">toggle_off</span>
+                <span class="manrope labels">$1</span>
+                <span id="halfToggle" class="toggle material-symbols-outlined"
+                title="round to the nearest $.50">toggle_off</span>
+                <span class="manrope labels">$.50</span>
             </div>
         </div>    
     </div>
