Create and format view toggle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <div id="container">
         <div id="innerContainer">
             <h1 class="">Just Another Tip Calculator</h1>
+            <div id="view">
+                <span>Basic</span>
+                <span id="viewToggle" class="toggle material-symbols-outlined basic">toggle_off</span>
+                <span>Advanced</span>
+            </div>
             <div id="setTip">
                 <div id="setTipText" class="manrope setTipUpper">Rate Your Server:</div>
                 <div id="setTipFunction" class="setTipLower">
