--- a/index.html
+++ b/index.html
@@ -17,43 +17,10 @@
             <h1 class="">Just Another Tip Calculator</h1>
             <div id="view">
                 <span>Basic</span>
-                <span id="viewToggle" class="toggle material-symbols-outlined basic">toggle_off</span>
+                <span id="viewToggle" class="toggle material-symbols-outlined basic">toggle_on</span>
                 <span>Advanced</span>
             </div>
             <div id="setTip">
-                <div id="setTipText" class="manrope setTipUpper">Rate Your Server:</div>
-                <div id="setTipFunction" class="setTipLower">
-                    <span 
-                        id="star1" 
-                        class="star material-symbols-outlined solid"
-                        title="10% tip">
-                        star
-                    </span>
-                    <span 
-                        id="star2" 
-                        class="star material-symbols-outlined"
-                        title="15% tip">
-                        star
-                    </span>
-                    <span
-                        id="star3" 
-                        class="star material-symbols-outlined"
-                        title="18% tip">
-                        star
-                    </span>
-                    <span
-                        id="star4"
-                        class="star material-symbols-outlined"
-                        title="20% tip">
-                        star
-                    </span>
-                    <span
-                        id="star5"
-                        class="star material-symbols-outlined"
-                        title="25% tip">
-                        star
-                    </span>
-                </div>
             </div>
             <div id="calculations">
                 <input 
@@ -68,9 +35,9 @@
                     class="manrope numbers"
                 />
                 <span id="subtotalLabel" class="manrope labels">Subtotal</span>
-                <span id="tipValue" class="manrope numbers">0</span>
+                <span id="tipValue" class="manrope numbers">0.00</span>
                 <span id="tipLabel" class="manrope labels">Tip</span>
-                <span id="totalValue" class="manrope numbers">0</span>
+                <span id="totalValue" class="manrope numbers">0.00</span>
                 <span id="totalLabel" class="manrope labels">Total</span>
             </div>
             <div id="toggles">
