Finish advanced view and functionality Reverted initial load to basic view

--- a/index.html
+++ b/index.html
@@ -17,10 +17,43 @@
             <h1 class="">Just Another Tip Calculator</h1>
             <div id="view">
                 <span>Basic</span>
-                <span id="viewToggle" class="toggle material-symbols-outlined basic">toggle_on</span>
+                <span id="viewToggle" class="toggle material-symbols-outlined basic">toggle_off</span>
                 <span>Advanced</span>
             </div>
             <div id="setTip">
+                <div id="setTipText" class="manrope setTipUpper">Rate Your Server:</div>
+            <div id="setTipFunction" class="setTipLower">
+                <span 
+                    id="star1" 
+                    class="star material-symbols-outlined solid"
+                    title="10% tip">
+                    star
+                </span>
+                <span 
+                    id="star2" 
+                    class="star material-symbols-outlined"
+                    title="15% tip">
+                    star
+                </span>
+                <span
+                    id="star3" 
+                    class="star material-symbols-outlined"
+                    title="18% tip">
+                    star
+                </span>
+                <span
+                    id="star4"
+                    class="star material-symbols-outlined"
+                    title="20% tip">
+                    star
+                </span>
+                <span
+                    id="star5"
+                    class="star material-symbols-outlined"
+                    title="25% tip">
+                    star
+                </span>
+            </div>
             </div>
             <div id="calculations">
                 <input 
