--- a/index.html
+++ b/index.html
@@ -57,15 +57,12 @@
             </div>
             <div id="calculations">
                 <input 
-                    type="number" 
+                    type="text" 
                     id="subtotal" 
                     name="subtotal" 
                     placeholder="0.00"
-                    step="0.01"
-                    min="0"
-                    inputmode="decimal"
-                    pattern="^\d*(\.\d{0,2})?$"
                     class="manrope numbers"
+                    required
                 />
                 <span id="subtotalLabel" class="manrope labels">Subtotal</span>
                 <span id="tipValue" class="manrope numbers">0.00</span>
@@ -77,9 +74,6 @@
                 <span id="wholeToggle" class="toggle material-symbols-outlined"
                 title="Round to the nearest $1">toggle_off</span>
                 <span class="manrope labels">$1</span>
-                <span id="halfToggle" class="toggle material-symbols-outlined"
-                title="round to the nearest $.50">toggle_off</span>
-                <span class="manrope labels">$.50</span>
             </div>
         </div>    
     </div>
