--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
         <div id="innerContainer">
-            <h1 class="">Just Another Tip Calculator</h1>
+            <h1 class="">Yet Another Tip Calculator</h1>
             <div id="view">
                 <span>Basic</span>
                 <span id="viewToggle" class="toggle material-symbols-outlined basic">toggle_off</span>
